feat(dependency): implement candidates finder and enhance vulnerability reporting